--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,25 +1,41 @@
 /* Universal Styles */
 
 html {
-
+  font-size: 16px;
 }
 
 body {
 
 }
 
-.container {
-
+.col-main {
+  margin: 2rem 1.54rem;
+  width: 60%
 }
 
-.flex {
+.col-sub {
+  margin: 2rem;
+  width: 40%;
+}
 
+.flex-row {
+  display: flex;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
+div {
+  border: solid 1px;
 }
 
 /* Header */
 
 header {
-
+  height: 4rem;
+  margin: 0 1.5rem;
 }
 
 nav {
