--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,26 +20,34 @@ body {
 
 .flex-row {
   display: flex;
+  align-items: center;
 }
 
 .flex-col {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 div {
   border: solid 1px;
+  display: block;
+}
+
+.container {
+  margin: 2rem 0 2rem 1.5rem;
 }
 
 /* Header */
 
 header {
   height: 4rem;
-  margin: 0 1.5rem;
+  margin-right: 1.5rem;
+  justify-content: space-between;
 }
 
 nav {
-
+  justify-content: flex-end;
 }
 
 /* Supporting Sections */
