--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,8 +4,8 @@ html {
   font-size: 16px;
 }
 
-body {
-
+body:nth-child(2n+1) {
+  background-color: #ecf0f1;
 }
 
 .col-main {
@@ -88,6 +88,10 @@ h3 {
   font-size: 1.5rem;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* Header */
 
 header {
@@ -104,7 +108,6 @@ nav {
 /* Main Banner Section */
 
 .main-banner {
-  background-color: #95a5a6;
   width: 100%;
 }
 .main-banner .container .col-sub {
@@ -137,6 +140,7 @@ nav {
 .info-details {
   align-items: flex-start;
   justify-content: center;
+  width: 65%;
 }
 
 .info-title {
@@ -153,6 +157,56 @@ nav {
 
 /* Courses Section */
 
+.courses {
+  width: 100%;
+}
+
+.courses .container {
+  margin:0 2.5rem;
+  padding: 1rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch;;
+}
+
+.courses h2 {
+  width: 100%;
+  margin: 1rem;
+  text-align: center;
+}
+
+.course {
+  margin: 1rem;
+  width: 30%;
+}
+
+.course-img {
+  width: 100%;
+  height: 33%;
+  height: auto;
+}
+
+.course-info {
+  margin: 1rem 1.5rem 1.5rem 1rem;
+}
+
+.course-info ul {
+  align-items: flex-start;
+}
+
+.course-info ul li:first-child {
+  font-weight: bold;
+  color: black;
+}
+
+.course-info ul li {
+  margin: 4px 0;
+  color: gray;
+}
+
+.course-info ul li:nth-child(2n + 2) {
+  text-transform: uppercase;
+}
 
 /* Thesis Section */
 
