--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,7 +9,7 @@ body:nth-child(2n+1) {
 }
 
 .col-main {
-  margin: 2rem 1.54rem;
+  margin: 2rem 1.5rem;
   width: 60%;
   display: flex;
   flex-direction: column;
@@ -17,7 +17,7 @@ body:nth-child(2n+1) {
 }
 
 .col-sub {
-  margin: 2rem;
+  margin: 2rem 0;
   width: 40%;
   display: flex;
   flex-direction: column;
@@ -41,7 +41,7 @@ div {
 }
 
 .container {
-  margin: 2rem 0 2rem 1.5rem;
+  margin: 1rem 0 1rem 1.5rem;
 }
 
 img {
@@ -96,6 +96,13 @@ h3 {
 
 a {
   text-decoration: none;
+  color: black;
+  transition: all 750ms linear 250ms;
+}
+
+a:hover {
+  color: blue;
+  font-size: 2rem;
 }
 
 /* Header */
@@ -107,8 +114,36 @@ header {
   width: 100%;
 }
 
-nav {
+header .container {
+  margin: 1rem 0 1rem 1.5rem;
+}
 
+.company-name  ul {
+  height: 2.5rem;
+  align-items: center;
+}
+
+.logo {
+  height: auto;
+  width: 2rem;
+}
+
+.company-name ul li {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.company-name ul li:nth-child(1n + 2) {
+  text-transform: uppercase;
+}
+
+.company-name ul li:last-child {
+  color: gray;
+}
+
+nav ul li {
+  font-size: 1.5rem;
+  padding-right: 1rem;
 }
 
 /* Main Banner Section */
@@ -244,7 +279,7 @@ nav {
 /* Footer */
 
 footer {
-  font-size: .75rem; 
+  font-size: .75rem;
 }
 
 footer .container {
